# gnome-shell-ubuntu-extensions

./: .gitignore  README.md  meson.build
.github/workflows/: build-deb.yaml  validate-wraps.yml
debian/: README.source  changelog  control  control.in  copyright  find-supported-shell-versions.py  gbp.conf  gjs-check-runtime-dependencies.sh  lintian-overrides  lrc.config  rules
debian/tests/: control  dependency-tests  upstream-tests
subprojects/: appindicators.wrap  dash-to-dock.wrap  desktop-icons-ng.wrap  snapd-prompting.wrap  snapd-search-provider.wrap  tiling-assistant.wrap  web-search-provider.wrap
subprojects/packagefiles/dash-to-dock/: meson.build  ubuntu.css
subprojects/packagefiles/dash-to-dock/po/: meson.build
subprojects/packagefiles/patches/appindicators/: lint-Update-rules-to-work-with-older-debian-eslint.patch  lint-ignore-optional-chanining-error.patch  metadata-use-appindicator-namespace-and-naming.patch
subprojects/packagefiles/patches/desktop-icons-ng/: 0001-Use-fg-color-for-selections.patch  0002-desktopManager-Adjust-selection-color-based-on-dark-.patch  0003-preferences-Use-interface-name-for-interface-setting.patch  0004-desktopManager-Adjust-styling-for-high-contrast-mode.patch
subprojects/packagefiles/patches/tiling-assistant/: 010_update-locale.patch  tilingWindowManager-Override-window-constraints-style.patch
subprojects/packagefiles/tiling-assistant/: meson.build
subprojects/packagefiles/tiling-assistant/translations/: LINGUAS  POTFILES.in  meson.build
tools/: validate-wrap-revisions.py
